# lnco-transcribe

./: .gitignore  LICENSE  README.md  freeze_requirements.txt  old.toml  pyproject.toml  requirements.txt
lnco-transcribe/: run_diarize.py
lnco_transcribe/: MTS_to_audio.py  preprocessing.ipynb  run_diarize.py  videos_to_audio.py
lnco_transcribe/utils/: format_helpers.py  preprocessing_helpers.py
lnco_transcribe/whisper_diarization/: diarize.py
src/: preprocessing.ipynb  run_diarize.py
src/utils/: preprocessing_helpers.py
src/whisper_diarization/: diarize.py
