[project]
name = "lnco-transcribe"
version = "1.0.0"
description = "A transcription tool with diarization for audio interviews."
authors = [
    {name = "AfroDeivid",email = "92383275+AfroDeivid@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
wget = "^3.2"
nemo-toolkit = {version = "2.0.0rc0", extras = ["asr"]}
nltk = "^3.9.1"
faster-whisper = ">=1.1.0"
demucs = {git = "https://github.com/MahmoudAshraf97/demucs.git", rev = "4273070a70ded308ddfd0879d267bbd06f89a1b7"}
deepmultilingualpunctuation = {git = "https://github.com/oliverguhr/deepmultilingualpunctuation.git", rev = "5a0dd7f4fd56687f59405aa8eba1144393d8b74b"}
ctc-forced-aligner = {git = "https://github.com/MahmoudAshraf97/ctc-forced-aligner.git", rev = "7578992b6647a98e65b539436d88bc7bba690374"}
ipykernel = "^6.29.5"
pandas = "^2.2.3"
pydub = "^0.25.1"
huggingface-hub = "0.23.5"
numpy = "1.26.4"
psutil = "^7.0.0"

[tool.poetry.scripts]
lnco-transcribe = "lnco_transcribe.run_diarize:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"